# swap_face_tensorrt

./: .gitignore  CMakeLists.txt  README.md
include/engine/: EngineBuildLoadNetwork.inl
include/interfaces/: IEngie.h  IEngine.h
src/: Face68Landmarks_trt.cpp  Face68Landmarks_trt.h  engine.h  faceenhancer_trt.h  facerecognizer_trt.cpp  facerecognizer_trt.h  faceswap_trt.cpp  faceswap_trt.h  main.cpp  utils.cpp  utils.h  yolov8n_face.cpp  yolov8n_face.h
